--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,13 +29,9 @@ jobs:
           ssh ${{ secrets.VPS_USER }}@${{ secrets.VPS_HOST }} << 'EOF'
             cd $APP_DIR
             cd NHL-portfolio-frontend
-            # Собираем образ из корня репозитория, где лежит Dockerfile
-            docker build -t nhl-frontend -f Dockerfile .
+            docker-compose down
+            docker-compose build
+            docker-compose up -d
             
-            # Останавливаем старый контейнер, если есть
-            docker rm -f nhl-frontend || true
-      
-            # Запускаем новый
-            docker run -d -p 80:80 --name nhl-frontend nhl-frontend
           EOF
 
